test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_type_max_keyword.sol
contract C {
    function f() pure public {
        abi.decode("", (type(uint).max));
    }
}
// ----
// TypeError 1039: (68-82): Argument has to be a type name.
